--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 	<h1>My Favorite Cartoons</h1>
-
+	<form action="/new" method="POST">
+		<input type="text" placeholder="cartoon name" name="name">
+		<input type="text" placeholder="description" name="description">
+		<button type="submit">Submit</button>
+	</form>
 </body>
 </html>
